2019-11-05  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92324
	* tree-vect-loop.c (check_reduction_path): For MIN/MAX require
	all signed or unsigned operations.

2019-11-05  Jan Hubicka  <jh@suse.cz>

	* hsa-brig.c: Include alloc-pool.h
	* hsa-dump.c: Likewise.
	* hsa-gen.c: Likewise.
	* hse-regalloc.c: Likewise.
	* ipa-hsa.c: Likewise.
	* ipa-predicate.c: Likewise.
	* ipa-reference.c: Likewise.
	* ipa-sra.c: Likewise.
	* omp-expand.c: Likewise.
	* omp-general.c: Likewise.
	* omp-low.c: Likewise.
	* sumbol-summary.h (function_summary_base): Add allocator.
	(function_summary<T *>::function_summary): Update construction.
	(fast_function_summary<T *, V>::fast_function_summary): Likewise.
	(call_summary_base): Add allcator.
	(call_summary<T *>::call_summary): Update construction.
	(fast_call_summary<T *, V>::fast_call_summary): Likewise.

2019-11-05  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/91945
	* builtins.c (compute_objsize): For ARRAY_REF, only multiply off
	by tpsize if it is both non-NULL and INTEGER_CST, otherwise punt.
	Formatting fix.

2019-11-05  Aldy Hernandez  <aldyh@redhat.com>

	* range-op.cc (wi_set_zero_nonzero_bits): Remove static qualifier.
	* range-op.h (wi_set_zero_nonzero_bits): New prototype.
	* tree-vrp.h (vrp_set_zero_nonzero_bits): Remove.
	* tree-vrp.c (wide_int_range_set_zero_nonzero_bits): Remove.
	(vrp_set_zero_nonzero_bits): Move to...
	* vr-values.c (vr_set_zero_nonzero_bits): ...here.
	(vr_values::simplify_bit_ops_using_ranges): Rename
	vrp_set_zero_nonzero_bits to vr_set_zero_nonzero_bits.

2019-11-05  Martin Liska  <mliska@suse.cz>

	PR c++/92339
	* fold-const.c (operand_compare::hash_operand): Remove
	FIELD_DECL handling.

2019-11-05  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.h (vrp_bitmap_equal_p): Remove.
	* tree-vrp.c (vrp_bitmap_equal_p): Move before use and make
	static.

2019-11-05  Aldy Hernandez  <aldyh@redhat.com>

	* tree-vrp.c (value_range_base::operator==): Use equal_p to