@@ -1,3 +1,8 @@
+2019-11-05  Martin Liska  <mliska@suse.cz>
+
+	* symbol-summary.h: Rename allocator to m_allocator and
+	add comment.
+
 2019-11-05  Richard Biener  <rguenther@suse.de>
 
 	PR tree-optimization/92324
